force-app/main/default/objects/Placement__c/Placement__c.object-meta.xml
<CustomObject>
    <label>Placement</label>
    <nameField>
        <displayFormat>PLC-{00000}</displayFormat>
        <label>Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>