force-app/main/default/objects/Placement__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>Candidate_Submission__r.Candidate__r.Full_Name__c</formula>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>