force-app/main/default/objects/Placement__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Candidate_Submission__r.Job_Order__r.Client__r.Client_Name__c</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>