force-app/main/default/objects/Placement__c/fields/Contract_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_Days__c</fullName>
    <formula>IF(ISBLANK(End_Date__c), NULL, End_Date__c - Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>