force-app/main/default/objects/Placement__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract (W2)</fullName>
            </value>
            <value>
                <fullName>Contract (C2C)</fullName>
            </value>
            <value>
                <fullName>Contract-to-Hire</fullName>
            </value>
            <value>
                <fullName>Direct Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>