force-app/main/default/objects/Placement__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>OR(ISPICKVAL(Placement_Status__c,&apos;Active&apos;), ISPICKVAL(Placement_Status__c,&apos;On Extension&apos;))</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>