force-app/main/default/objects/Placement__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <label>Pay Rate ($/hr)</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>