force-app/main/default/objects/Placement__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <label>Placement Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Start</fullName>
                <default>true</default>
                <label>Pending Start</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Extension</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Early Termination</fullName>
            </value>
            <value>
                <fullName>Converted to Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>