force-app/main/default/objects/Placement__c/validationRules/End_date_must_be_after_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_must_be_after_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(End_Date__c)),
  End_Date__c &lt;= Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Contract end date must be after the start date</errorMessage>
</ValidationRule>