force-app/main/default/objects/Placement__c/validationRules/Placement_Recruiter_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Placement_Recruiter_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Recruiter__c )</errorConditionFormula>
    <errorMessage>A recruiter must be assigned to this placement.</errorMessage>
</ValidationRule>